fixed overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .router-outlet-wrapper {
-  padding: 20px 20px;
+  padding: 20px 0 10px;
 }
