--- a/src/app/routes/triangles/triangles.component.scss
+++ b/src/app/routes/triangles/triangles.component.scss
@@ -1,5 +1,5 @@
 .triangles-wrapper {
-  margin-top: 6px;
+  margin: 6px 0 4px;
 }
 
 .triangle-outer-wrapper {
